--- a/tootoo-templates/basic-hamburger-markdown.html
+++ b/tootoo-templates/basic-hamburger-markdown.html
@@ -6,7 +6,7 @@
 <meta name=description content="basic html template with sliding menu, markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2017-12-18" >
-<title>Theo Armour</title>
+<title>file viewer</title>
 <style>
 /* Copyright 2017 pushMe pullYou authors. MIT License */
 
@@ -23,7 +23,7 @@
 	button, input[ type=button ] { background-color: #ddd; border: none; color: var( --mnu-color ); cursor: pointer; padding: 3px 20px; }
 	button:hover { background-color: #ccc; color: white }
 
-	iframe { border: none; width: 100%; }
+	iframe { width: 100%; }
 
 	input[ type = range ] { -webkit-appearance: none; -moz-appearance: none; background-color: #ddd; width: 100%; }
 	input[ type = range ]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }
@@ -48,31 +48,23 @@
 
 	<div id = "divMenu" >
 
-		<a href="https://github.com/theo-armour/theo-armour.github.io" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+<!--	<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a> -->
 		<div id = "divTitle" ></div>
 
 		<div id = "divMenuItems" >
 
-			<div><a href=#page/about.md >About</a></div>
-			<div><a href=#page/contact.md >Contact</a></div>
-
-			<div><a href="#../../plugins/view-github-issues-blog-posts.html">Blog Posts</a></div>
-
-
-			<div><a href=#../../plugins/view-github-repos.html >My GitHub Repository Events</a></div>
-			<div><a href=#../../plugins/view-github-events.html >All My GitHub Events</a></div>
-			<div><a href=#../../plugins/view-rss.html >My GitHub RSS</a></div>
 		</div>
+
 
 		<div id= "divFooter" >
 
 			<hr>
 
-			<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
-			<div><a href=#../../pages/code-of-conduct.md >Code of Conduct</a></div>
-			<div><a href=#../../pages/contributing.md >Contributing</a></div>
-			<div><a href=#../../pages/license.md >License</a></div>
-			<div><a href=#../../pages/markdown-help.md >Markdown Help</a></div>
+			<div title='many thanks!' ><a href=#../pages/credits.md >Credits</a></div>
+			<div><a href=#../pages/code-of-conduct.md >Code of Conduct</a></div>
+			<div><a href=#../pages/contributing.md >Contributing</a></div>
+			<div><a href=#../pages/license.md >License</a></div>
+			<div><a href=#../pages/markdown-help.md >Markdown Help</a></div>
 			<div><a href="javascript:( function(){ var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
 			<div><a href="https://api.github.com/rate_limit" target=_blank title='If menu stops appearing, it is likely due to too many API calls' >View GitHub API Rate Limits</a></div>
 
@@ -94,8 +86,9 @@
 // https://github.com/showdownjs/showdown
 
 	let defaultFile = 'index.html';
-	location.hash = 'README.md';
-	let uriDefaultFile = 'README.md';
+	location.hash = '../README.md';
+
+	let contents;
 
 	init();
 
@@ -107,80 +100,36 @@
 			'<p>' + document.head.querySelector( '[name=description]' ).content + '</p>' +
 		'';
 
-		window.addEventListener ( 'hashchange', onHashChange, false );
+		if ( location.hash.endsWith( '.md' ) ) {
 
-		onHashChange();
+			onHashChange();
+
+		} else {
+
+			window.location.href = defaultFile + location.hash;
+
+		}
+
 
 	}
-
 
 
 	function onHashChange() {
 
-		const url = !location.hash ? uriDefaultFile : location.hash.slice( 1 );
-		const ulc = url.toLowerCase();
-
-		if ( ulc.endsWith( '.md' ) ) {
-
-			requestFile( url, callbackMarkdown );
-
-		} else if ( ulc.endsWith( '.html' ) ) {
-
-			divContents.style.maxWidth = '100%';
-			document.body.style.overflow = 'hidden';
-
-			divContents.innerHTML = '<iframe src=' + url + ' height=100% width=100% ></iframe>';
-
-		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
-
-			divContents.innerHTML = '<img src=' + urlGitHubPage + url + ' >';
-
-		} else {
-
-			requestFile( urlGitHubPage + url, callbackToTextarea );
-
-		}
-
-	}
-
-
-
-
-	function callbackMarkdown( xhr ){
-
 		showdown.setFlavor('github');
+
 		const converter = new showdown.Converter();
-		const response = xhr.target.response;
-		const html = converter.makeHtml( xhr.target.responseText );
 
-		divContents.style.maxWidth = '800px';
-		document.body.overflow = '';
-		divContents.innerHTML = html;
-		window.scrollTo( 0, 0 );
-
-	}
-
-
-
-	function callbackToTextarea( xhr ){
-
-		const response = xhr.target.response;
-
-		divContents.innerHTML = '<textarea style=height:100%;width:100%; >' + response + '</textarea>';
-
-	}
-
-
-
-	function requestFile( url, callback ) {
+		const url = location.hash.slice( 1 );
 
 		const xhr = new XMLHttpRequest();
-		xhr.crossOrigin = 'anonymous';
-		xhr.open( 'GET', url, true );
-		xhr.onerror = function( xhr ) { console.log( 'error:', xhr  ); };
-//		xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
-		xhr.onload = callback;
+		xhr.open( 'get', url, true );
+		xhr.onload = function() { divContents.innerHTML = converter.makeHtml( xhr.responseText ); };
 		xhr.send( null );
+
+		document.title = url.split( '/' ).pop();
+
+		window.addEventListener( 'hashchange', onHashChange, false );
 
 	}
 
