--- a/tootoo-templates/open-markdown-or-html/open-markdown-or-html-r1.html
+++ b/tootoo-templates/open-markdown-or-html/open-markdown-or-html-r1.html
@@ -24,7 +24,7 @@
 // https://github.com/jaanga/jaanga.github.io/tree/master/cookbook-html/templates2/open-index-or-markdown
 
 	let defaultFile = 'index.html';
-	location.hash = '../README.md';
+	location.hash = '../../README.md';
 
 	let contents;
 
@@ -49,6 +49,7 @@
 		contents = contents ? contents : document.body.appendChild( document.createElement( 'div' ) ) ;
 
 		showdown.setFlavor('github');
+
 		const converter = new showdown.Converter();
 
 		const url = location.hash.slice( 1 );
