--- a/tootoo-templates/hamburger-markdown-html-swipe.html
+++ b/tootoo-templates/hamburger-markdown-html-swipe.html
@@ -90,6 +90,11 @@
 <script>
 // https://github.com/showdownjs/showdown
 
+
+	var xDown = null;
+	var yDown = null;
+
+
 //	let defaultFile = 'index.html';
 //	location.hash = '../README.md';
 	let uriDefaultFile = 'README.md';
@@ -104,6 +109,9 @@
 			'<h2><a href = "" >' + document.title + '</a></h2>' +
 			'<p>' + document.head.querySelector( '[name=description]' ).content + '</p>' +
 		'';
+
+		document.addEventListener( 'touchstart', onTouchStart, false );
+		document.addEventListener( 'touchmove', onTouchMove, false );
 
 		window.addEventListener ( 'hashchange', onHashChange, false );
 
@@ -181,6 +189,68 @@
 		xhr.send( null );
 
 	}
+
+
+
+
+	function onTouchStart( event ) {
+
+		xDown = event.touches[ 0 ].clientX;
+		yDown = event.touches[ 0 ].clientY;
+
+	};
+
+
+	function onTouchMove(event) {
+
+		if ( ! xDown || ! yDown ) {
+
+			return;
+
+		}
+
+		var xUp = event.touches[ 0 ].clientX;
+		var yUp = event.touches[ 0 ].clientY;
+
+		var xDiff = xDown - xUp;
+		var yDiff = yDown - yUp;
+
+		if ( Math.abs( xDiff ) > Math.abs( yDiff ) ) {// most significant
+
+			if ( xDiff > 0 ) {
+
+				toggleNav()
+// left swipe
+console.log( 'left swipe' );
+
+			} else {
+
+				toggleNav();
+// right swipe
+console.log( 'right swipe' );
+
+			}
+
+		} else {
+
+			if ( yDiff > 0 ) {
+
+//up swipe
+console.log( 'up swipe' );
+
+			} else {
+
+// down swipe
+console.log( 'down swipe' );
+
+			}
+
+		}
+
+		xDown = null;
+		yDown = null;
+
+	};
 
 
 
