--- a/tootoo-users/theo-armour/theo-armour.html
+++ b/tootoo-users/theo-armour/theo-armour.html
@@ -12,7 +12,7 @@
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
-	html { --mnu-color: MediumSlateBlue; --mnu-back-color: cornsilk; --mnu-width:300px; height: 100%; }
+	html { --mnu-color: MediumSlateBlue; --mnu-back-color: cornsilk; --mnu-width:350px; height: 100%; }
 
 	body, html { font: 12pt monospace; height: 100%; margin: 0; }
 
@@ -35,7 +35,7 @@
 	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
 
 
-	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; margin: 0;
+	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; height: 100%; margin: 0;
 		overflow-x: hidden; padding: 30px 10px 30px 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: 0.5s; }
 
 	#hamburger { background-color: pink; box-sizing: border-box; cursor: pointer; font-size: 30px; left: calc( var( --mnu-width ) - 100px );
@@ -63,6 +63,9 @@
 			<div><a href=#../../plugins/view-github-events.html >All My GitHub Events</a></div>
 			<div><a href=#../../plugins/view-rss.html >My GitHub RSS</a></div>
 		</div>
+
+		<h3>GitHub Stats</h3>
+		<iframe src='./plugin/view-github-profile-r2.html' height=700 width=100% ></iframe>
 
 		<div id= "divFooter" >
 
