--- a/tootoo-users/theo-armour/plugin/view-github-profile-r2.html
+++ b/tootoo-users/theo-armour/plugin/view-github-profile-r2.html
@@ -128,9 +128,9 @@
 
 		}
 
-//		height = document.body.scrollHeight;
+		height = document.body.scrollHeight;
 
-//		parent.ifrMenu.style.height = height + 'px';
+		parent.ifrProfile.style.height = ( height + 50 ) + 'px';
 
 //console.log( '', xhr );
 
