--- a/tootoo-users/theo-armour/plugin/view-github-profile.html
+++ b/tootoo-users/theo-armour/plugin/view-github-profile.html
@@ -130,7 +130,7 @@
 
 //		height = document.body.scrollHeight;
 
-//		parent.ifrMenu.style.height = height + 'px';
+//		parent.ifrProfile.style.height = height + 'px';
 
 //console.log( '', xhr );
 
