--- a/tootoo-users/theo-armour/theo-armour.html
+++ b/tootoo-users/theo-armour/theo-armour.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
-<meta name=description content="basic html template with sliding menu, markdown capability and frequently used pages" >
+<meta name=description content="Aging script kiddie" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2017-12-18" >
 <title>Theo Armour</title>
 <style>
-/* Copyright 2017 pushMe pullYou authors. MIT License */
+/* Copyright 2018 pushMe pullYou authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
@@ -48,7 +48,7 @@
 
 	<div id = "divMenu" >
 
-		<a href="https://github.com/theo-armour/theo-armour.github.io" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+		<a href="https://github.com/theo-armour/" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
 		<div id = "divTitle" ></div>
 
 		<div id = "divMenuItems" >
@@ -64,8 +64,11 @@
 			<div><a href=#../../plugins/view-rss.html >My GitHub RSS</a></div>
 		</div>
 
+		<hr>
+
 		<h3>GitHub Stats</h3>
-		<iframe src='./plugin/view-github-profile-r2.html' height=700 width=100% ></iframe>
+
+		<iframe id=ifrProfile src='./plugin/view-github-profile-r2.html' width=100% ></iframe>
 
 		<div id= "divFooter" >
 
@@ -96,21 +99,23 @@
 <script>
 // https://github.com/showdownjs/showdown
 
-	let defaultFile = 'index.html';
+//	let defaultFile = 'index.html';
 	location.hash = 'README.md';
-	let uriDefaultFile = 'README.md';
+//	let uriDefaultFile = 'README.md';
 
 	init();
 
 
 	function init() {
 
-		divTitle.innerHTML = 
+		divTitle.innerHTML =
 			'<h2><a href = "" >' + document.title + '</a></h2>' +
 			'<p>' + document.head.querySelector( '[name=description]' ).content + '</p>' +
 		'';
 
 		window.addEventListener ( 'hashchange', onHashChange, false );
+
+		ifrProfile.onload=ifrProfile.style.height=ifrProfile.contentWindow.innerHeight;
 
 		onHashChange();
 
