--- a/tootoo10/plugins/threejs-basic.html
+++ b/tootoo10/plugins/threejs-basic.html
@@ -15,8 +15,8 @@
 </style>
 </head>
 <body>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/build/three.min.js" ></script>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r89/build/three.min.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r89/examples/js/controls/OrbitControls.js" ></script>
 
 	<div id = "menu" >
 		<div id = "title" ></div>
