--- a/tootoo10/tootoo10.html
+++ b/tootoo10/tootoo10.html
@@ -5,11 +5,11 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
 <meta name = "description" content = "List and view all the files in all the folders. File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-12-18" >
-<title>Index Table of Contents</title>
+<meta name = "date" content = "2018-01-05" >
+<title>Index / Table of Contents</title>
 
 <style>
-/* Copyright 2017 pushMe pullYou authors. MIT License */
+/* Copyright 2018 pushMe pullYou authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
@@ -51,9 +51,9 @@
 
 <!--
 		<p>
-			<a href="http://www.ladybug.tools/" target="_top" >Ladybug Tools</a> &raquo; 
-			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo; 
-			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo; 
+			<a href="http://www.ladybug.tools/" target="_top" >Ladybug Tools</a> &raquo;
+			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo;
+			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
 		</p>
 -->
 
@@ -68,7 +68,11 @@
 
 		<div id = "divMenuItems" ></div>
 
-		<p>Tooltips provide file size. Click <img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' > icon to view source code on GitHub. Click &#x2750; icon to obtain a link to the individual file.</p>
+		<p><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' > Click icon to view source code on GitHub.
+
+		<p> &#x2750; Click icon to go full screen & get link to individual file.</p>
+
+		<p>Tooltips provide file size.</p>
 
 		<div id= "divFooter" >
 
@@ -79,10 +83,12 @@
 			<div><a href=#pages/contributing.md >Contributing</a></div>
 			<div><a href=#pages/license.md >License</a></div>
 			<div><a href=#pages/markdown-help.md >Markdown Help</a></div>
-			<div><a href="javascript:( function(){ var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
-			<div><a href="https://api.github.com/rate_limit" target="_blank">github rate limits</a></div>
+	<!--		<div><a href="javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
+	-->
+			<div><a href=#pages/about-this-cms.md >About this CMS</a></div>
+			<div><a href="https://api.github.com/rate_limit" target="_blank" title="Occasionaly this script breaks if you go over the GitHub API rate limit" >github rate limits</a></div>
 
-			<p onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top and, btw, my web is better than your web' >&#x1f578;</p>
+			<h3 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top' > &#x2766; </h3>
 
 		</div>
 
@@ -100,19 +106,24 @@
 
 <script>
 
-	const user = 'pushme-pullyou';
-	const repo = '/pushme-pullyou.github.io';
-	const pathRepo = 'tootoo10/'; // needs trailing slash
+	const user = 'prediqtiv';
+	const repo = '/alpha-vantage-cookbook';
+	const pathRepo = ''; // 'tootoo10/'; // needs trailing slash
+
 
 /*
+	const user = 'pushme-pullyou';
+	const repo = '/pushme-pullyou.github.io';
+	const pathRepo = ''; // 'tootoo10/'; // needs trailing slash
+
 	const user = 'ladybug-tools'
 	const repo = '/spider';
 	const pathRepo = '';
 
-
 	const user = 'theo-armour'
 	const repo = '/ucsf2';
 	const pathRepo = '';
+
 
 	const user = 'webmath'
 	const repo = '/webmath.github.io';
@@ -120,16 +131,16 @@
 */
 
 
-//	const uriDefaultFile = 'README.md';
-	const uriDefaultFile = 'plugins/view-github-issues.html'
+	const uriDefaultFile = 'README.md';
+//	const uriDefaultFile = 'plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 > </a>';
 
-	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/';
 
-	const urlGitHubPage = 'https://rawgit.com/' + user + repo + '/master/';
+	const urlGitHubPage = 'https://rawgit.com/' + user + repo + '/master/' + pathRepo;
 
-	const urlGitHubSource = 'https://github.com/' + user + repo;
+	const urlGitHubSource = 'https://github.com/' + user + repo + pathRepo;
 //	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
 
 
@@ -164,13 +175,15 @@
 			ulc = url.toLowerCase();
 
 			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';
-//console.log( url.lastIndexOf( '/' ), crumbs );
+
+console.log( url.lastIndexOf( '/' ), crumbs );
 
 			setBreadcrumbs( crumbs );
 
-//console.log( '',  urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ) );
+//console.log( 'crumbs',  crumbs );
 
 			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
+//			requestFile( url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
 
 		}
 
@@ -179,11 +192,12 @@
 			requestFile( url, callbackMarkdown );
 
 		} else if ( ulc.endsWith( '.html' ) ) {
+// needs revisiting so 'view-github-issues' scrolls more nicely
 
 			document.body.style.overflow = 'hidden';
 			divContents.innerHTML = '<iframe src=' + url + ' style=border:none;height:100%;width100%; ></iframe>';
 
-		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
+		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' ) || ulc.endsWith( '.ico' ) ) {
 
 			divContents.innerHTML = '<img src=' + urlGitHubPage + url + ' style=margin:20px; >';
 
@@ -255,9 +269,7 @@
 
 		let txt = '';
 
-// testing
-
-//		if ( items.message ) { alert( items.message ); return; }
+//	if ( items.message ) { alert( items.message ); return; }
 
 		const ignoreFolders = [ 'data' ]; //, 'plugins'
 
@@ -269,8 +281,8 @@
 
 				txt +=
 					'<div style=margin-bottom:8px; >' +
-						'<a href=JavaScript:getFolderContents("' + item.path.slice( len )  + '"); >&#x1f4c1; ' + 
-							item.name  + 
+						'<a href=JavaScript:getFolderContents("' + item.path.slice( len )  + '"); >&#x1f4c1; ' +
+							item.name  +
 						'</a>' +
 					'</div>' +
 				'';
@@ -292,17 +304,17 @@
 				txt +=
 					'<table><tr>' +
 
-						'<td><a href="' + urlGitHubSource + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
+						'<td><a href="' + urlGitHubSource + '/blob/master/' + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
 						'<td>' +
 
 // choose to access remote or local files
-//							'<a href=#' + urlGitHubPage + pathRepo + itemPath + 
-							'<a href=#' + itemPath + 
+							'<a href=#' + urlGitHubPage + pathRepo + itemPath +
+//							'<a href=#' + itemPath +
 
 							' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
 // choose to access remote or local files
-//							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
-							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
+							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
+//							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
 
 						'</td>' +
 
@@ -310,9 +322,9 @@
 
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
 						&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
-console.log( 'itemPath', itemPath );
-//					location.hash = urlGitHubPage + pathRepo + itemPath;
-					location.hash = itemPath;
+
+					location.hash = urlGitHubPage + pathRepo + itemPath;
+//					location.hash = itemPath;
 
 				}
 
