--- a/jibjib1/jibjib1.html
+++ b/jibjib1/jibjib1.html
@@ -42,7 +42,9 @@
 		line-height: 30px; margin: 0; padding: 5px 15px 8px 10px; position: fixed; top: 0; transition: left .5s; z-index: 10; }
 
 
-		img.intLink { border: 0; }
+
+
+img.intLink { border: 0; }
 
 .intLink { cursor: pointer; }
 
@@ -170,8 +172,8 @@ const user = 'theo-armour'
 	const repo = '/theo-armour.github.io';
 	const pathRepo = '';
 
-//	const uriDefaultFile = './README.md';
-	const uriDefaultFile = 'plugins/view-github-issues.html'
+	const uriDefaultFile = './README.md';
+//	const uriDefaultFile = 'plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 > </a>';
 
@@ -203,7 +205,7 @@ const user = 'theo-armour'
 
 		requestFile( urlGitHubApiContents, callbackGitHubMenu );
 
-//		onHashChange();
+		onHashChange();
 
 	}
 
