--- a/tootoo10/tootoo10-00.html
+++ b/tootoo10/tootoo10-00.html
@@ -6,7 +6,7 @@
 <meta name = "description" content = "List and view all the files in all the folders. File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = "keywords" content = "JavaScript,Markdown,Showdown,GitHub,API,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-01-05" >
-<title></title>
+<title>Index / Table of Contents</title>
 
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -58,17 +58,15 @@
 -->
 
 		<h2>
-			<a id = "aInfo" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat'  ></a>
-			<a href="" id=aTitle ></a>
+			<a id = "urlInfo" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat'  ></a>
+			<a href="" ><script> document.write( document.title )</script></a>
 		</h2>
 
-		<div id = "divDescription" ></div>
+		<p><script> document.write(document.head.querySelector( '[name=description]' ).content ); </script></p>
 
-		<div id = "divBreadcrumbs" ></div>
+		<div id = "divBreadcrumbs"></div>
 
 		<div id = "divMenuItems" ></div>
-
-		<hr>
 
 		<p><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' > Click icon to view source code on GitHub.
 
@@ -108,43 +106,34 @@
 
 <script>
 
-	// const user = 'prediqtiv';
-	// const repo = '/alpha-vantage-cookbook';
-	// const pathRepo = ''; // needs trailing slash
-	// const title = user + repo;
-	// let defaultFile;
-	// const description = "Plain-vanilla JavaScript cookbook code examples for accessing Alpha Vantage market data.";
+	const user = 'prediqtiv';
+	const repo = '/alpha-vantage-cookbook';
+	const pathRepo = ''; // 'tootoo10/'; // needs trailing slash
 
+
+/*
 	const user = 'pushme-pullyou';
 	const repo = '/pushme-pullyou.github.io';
-//starting in a remote folder need fixing
-	const pathRepo = ''; //  'tootoo10/'; // needs trailing slash
-	const title = user;
-	let defaultFile;
-	const description = 'Browse and view files on GitHub with remarkable ease.';
+	const pathRepo = ''; // 'tootoo10/'; // needs trailing slash
 
-	// const user = 'ladybug-tools'
-	// const repo = '/spider';
-	// const pathRepo = '';
-	// const title = user + ' ' + repo;
-	// var defaultFile = 'plugins/view-github-issues.html';
-	// let description;
+	const user = 'ladybug-tools'
+	const repo = '/spider';
+	const pathRepo = '';
 
-	// const user = 'theo-armour'
-	// const repo = '/ucsf2';
-	// const pathRepo = '';
-	// const title = user + ' ' + repo;
-	// let defaultFile;
-	// const description = 'The ruminations, musings and code snippets of a patient that relate to https://ucsf.edu';
+	const user = 'theo-armour'
+	const repo = '/ucsf2';
+	const pathRepo = '';
 
-	// const user = 'webmath'
-	// const repo = '/webmath.github.io';
-	// const pathRepo = '';
-	// const title = user;
-	// const defaultFile = 'readme.md';
-	// let description;
 
-	const uriDefaultFile = defaultFile ? defaultFile : 'README.md';
+	const user = 'webmath'
+	const repo = '/webmath.github.io';
+	const pathRepo = '';
+*/
+
+
+	const uriDefaultFile = 'README.md';
+//	const uriDefaultFile = 'plugins/view-github-issues.html'
+
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 > </a>';
 
 	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/';
@@ -159,15 +148,11 @@
 
 	function init() {
 
-		aInfo.href = urlGitHubSource;
-//		aTitle.innerHTML = document.title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
-		aTitle.innerHTML = document.title = title;
-
-		divDescription.innerHTML = description ? description : document.head.querySelector( '[name=description]' ).content + '<hr>';
+		urlInfo.href = urlGitHubSource;
 
 		window.addEventListener ( 'hashchange', onHashChange, false );
 
-		getFolderContents( pathRepo );
+		requestFile( urlGitHubApiContents, callbackGitHubMenu );
 
 		onHashChange();
 
@@ -189,13 +174,15 @@
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
 
-// better to add breadcrumbs below
-//			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';
-//console.log( url.lastIndexOf( '/' ), crumbs );
-//			setBreadcrumbs( crumbs );
+			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';
+
+console.log( url.lastIndexOf( '/' ), crumbs );
+
+			setBreadcrumbs( crumbs );
+
 //console.log( 'crumbs',  crumbs );
 
-//			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
+			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
 //			requestFile( url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
 
 		}
@@ -205,7 +192,6 @@
 			requestFile( url, callbackMarkdown );
 
 		} else if ( ulc.endsWith( '.html' ) ) {
-
 // needs revisiting so 'view-github-issues' scrolls more nicely
 
 			document.body.style.overflow = 'hidden';
@@ -216,7 +202,6 @@
 			divContents.innerHTML = '<img src=' + urlGitHubPage + url + ' style=margin:20px; >';
 
 // update menu
-
 		} else if ( url.endsWith( '/'  ) ) {
 
 			bits = url.split( '#' );
@@ -279,13 +264,12 @@
 	function callbackGitHubMenu( xhr ) {
 
 		const response = xhr.target.response;
-
 		const items = JSON.parse( response );
 		const len = pathRepo.length;
 
 		let txt = '';
 
-		if ( items.message ) { alert( items.message ); return; }
+//	if ( items.message ) { alert( items.message ); return; }
 
 		const ignoreFolders = [ 'data' ]; //, 'plugins'
 
@@ -331,7 +315,6 @@
 // choose to access remote or local files
 							( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
 //							( item.path.endsWith( 'html' ) ? '<a href=' + itemPath + ' >&#x2750;</a>' : '' ) +
-
 
 						'</td>' +
 
