--- a/tootoo-users/ladybug-tools-spider/ladybug-tools-spider.html
+++ b/tootoo-users/ladybug-tools-spider/ladybug-tools-spider.html
@@ -68,7 +68,13 @@
 
 		<div id = "divMenuItems" ></div>
 
-		<p>Tooltips provide file size. Click <img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' > icon to view source code on GitHub. Click &#x2750; icon to obtain a link to the individual file.</p>
+		<hr>
+
+		<p><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' > Click icon to view source code on GitHub.
+
+		<p> &#x2750; Click icon to go full screen & get link to individual file.</p>
+
+		<p>Tooltips provide file size.</p>
 
 		<div id= "divFooter" >
 
@@ -104,8 +110,8 @@
 	const repo = '/spider';
 	const pathRepo = '';
 
-//	const uriDefaultFile = './README.md';
-	const uriDefaultFile = '../../plugins/view-github-issues.html'
+	const uriDefaultFile = 'README.md';
+//	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 > </a>';
 
@@ -113,8 +119,8 @@
 
 	const urlGitHubPage = 'https://rawgit.com/' + user + repo + '/master/';
 
-//	const urlGitHubSource = 'https://github.com/' + user + repo;
-	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
+	const urlGitHubSource = 'https://github.com/' + user + repo;
+//	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
 
 
 	init();
@@ -144,18 +150,22 @@
 
 		} else {
 
+//https://rawgit.com/ladybug-tools/spider/master
+
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
 
-			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';
+console.log( 'url', url );
 
-//console.log( url.lastIndexOf( '/' ), crumbs );
+//			crumbs = url.lastIndexOf( '/' ) > 0 ? url.slice( 0, url.lastIndexOf( '/' ) ) : '';			start =  url.lastIndexOf( '/' );
+			crumbs = url.startsWith( 'https://' ) ? url.slice( 47 ) : url;
+			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
-			setBreadcrumbs( crumbs );
+console.log( 'crumbs2',  crumbs2 );
+			setBreadcrumbs( crumbs2 );
 
-//console.log( 'crumbs',  crumbs );
-
-			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
+//			requestFile( urlGitHubApiContents + url.slice( 0, url.lastIndexOf( '/' ) + 1 ), callbackGitHubMenu );
+			requestFile( urlGitHubApiContents + crumbs2, callbackGitHubMenu );
 
 		}
 
@@ -164,12 +174,13 @@
 			requestFile( url, callbackMarkdown );
 
 		} else if ( ulc.endsWith( '.html' ) ) {
+
 // needs revisiting so 'view-github-issues' scrolls more nicely
 
 			document.body.style.overflow = 'hidden';
 			divContents.innerHTML = '<iframe src=' + url + ' style=border:none;height:100%;width100%; ></iframe>';
 
-		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
+		} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' ) || ulc.endsWith( '.ico' ) ) {
 
 			divContents.innerHTML = '<img src=' + urlGitHubPage + url + ' style=margin:20px; >';
 
@@ -186,6 +197,7 @@
 	function getFolderContents( path = '' ) {
 
 		const url = urlGitHubApiContents + path;
+//		const url = path;
 
 		requestFile( url, callbackGitHubMenu );
 
