--- a/pushme-pullyou.html
+++ b/pushme-pullyou.html
@@ -107,13 +107,13 @@
 	const repo = '/pushme-pullyou.github.io';
 	const pathRepo = '';
 
-	const uriDefaultFile = '../../README.md';
+	const uriDefaultFile = 'README.md';
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
 	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
 
-	const urlGitHubPage = 'https://rawgit.com/' + user + repo + '/master/';
+	let urlGitHubPage;
 
 	const urlGitHubSource = 'https://github.com/' + user + repo;
 //	const urlGitHubSource = 'https://github.com/' + user + repo + '/blob/master/' + pathRepo;
@@ -122,6 +122,8 @@
 	init();
 
 	function init() {
+
+		urlGitHubPage = location.host.startsWith( 'https://' + user + '.github.io/' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
 
 		urlInfo.href = urlGitHubSource;
 
@@ -141,7 +143,7 @@
 
 		if ( !location.hash ) {
 
-			url = uriDefaultFile;
+			url = urlGitHubPage + uriDefaultFile;
 			ulc = url.toLowerCase();
 
 		} else {
@@ -156,7 +158,8 @@
 			crumbs = location.host.startsWith( 'https://pushme-pullyou.github.io/' ) ? url : url.slice( 66 );
 			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
-//console.log( 'crumbs2',  crumbs2 );
+console.log( 'crumbs2',  crumbs2 );
+
 			setBreadcrumbs( crumbs2 );
 
 			requestFile( urlGitHubApiContents + crumbs2, callbackGitHubMenu );
