--- a/pushme-pullyou.html
+++ b/pushme-pullyou.html
@@ -6,7 +6,7 @@
 <meta name = "description" content = "List and view all the files in all the folders. File wrangler. Default index.html file. Opens HTML or Markdown files. Passes location.hash." >
 <meta name = "keywords" content = "JavaScript,Showdown,Markdown,GitHub,FOSS" >
 <meta name = "date" content = "2018-01-17" >
-<title>pushMe pullYou 4 / Table of Contents</title>
+<title>pushMe pullYou 5 / Table of Contents</title>
 
 <style>
 /* Copyright 2017 pushMe pullYou authors. MIT License */
@@ -123,7 +123,7 @@
 
 	function init() {
 
-		urlGitHubPage = location.host.startsWith( user + '.github.io/' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
+		urlGitHubPage = location.host.startsWith( user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
 console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
