--- a/pushme-pullyou.html
+++ b/pushme-pullyou.html
@@ -156,7 +156,7 @@ console.log( 'urlGitHubPage', urlGitHubPage );
 
 //https://rawgit.com/pushme-pullyou/pushme-pullyou.github.io/master/
 
-			crumbs = location.host.startsWith( 'https://pushme-pullyou.github.io/' ) ? url : url.slice( 66 );
+			crumbs = location.host.startsWith( 'pushme-pullyou.github.io' ) ? url : url.slice( 66 );
 			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
 console.log( 'crumbs2',  crumbs2 );
