--- a/tootoo-users/prediqtiv-alpha-vantage/pav.html
+++ b/tootoo-users/prediqtiv-alpha-vantage/pav.html
@@ -80,7 +80,7 @@
 
 			<hr>
 
-			<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
+			<div title='many thanks!' ><a href=#pages/credits.md >Credits</a></div>
 			<div><a href=#pages/code-of-conduct.md >Code of Conduct</a></div>
 			<div><a href=#pages/contributing.md >Contributing</a></div>
 			<div><a href=#pages/license.md >License</a></div>
@@ -161,7 +161,7 @@
 
 			start = ( 'https://rawgit.com/' + user + repo +'/master/' ).length;
 
-			crumbs = location.host.startsWith( 'pushme-pullyou.github.io' ) ? url : url.slice( start );
+			crumbs = location.host.startsWith( user + '.github.io' ) ? url : url.slice( start );
 			crumbs2 = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
 //console.log( 'crumbs2',  crumbs2 );
