--- a/tootoo12/index.html
+++ b/tootoo12/index.html
@@ -6,8 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../index.html' + location.hash;
-
+	window.location.href = 'pushme-pullyou2/pushme-pullyou.html#../README.md'
 </script>
 </body>
 </html>
