--- a/pushme-pullyou.html
+++ b/pushme-pullyou.html
@@ -105,7 +105,7 @@
 
 <script>
 
-	const user = 'pushme-pullyou'
+	const user = 'pushme-pullyou';
 	const repo = '/pushme-pullyou.github.io';
 	const pathRepo = '';
 
@@ -239,7 +239,7 @@
 
 		let txt = '';
 
-	if ( items.message ) { alert( items.message ); return; }
+		if ( items.message ) { alert( items.message ); return; }
 
 		const ignoreFolders = [ 'data' ]; //, 'plugins'
 
