--- a/tootoo12/jaanga-cookbook-html/jaanga-cookbook-html.html
+++ b/tootoo12/jaanga-cookbook-html/jaanga-cookbook-html.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "This script allows you to list, open view all the files in all the Spider folders" >
+<meta name = "description" content = "This script allows you to list, open view all the files in all the jaanga folders" >
 <meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-02-01" >
-<title>Spider</title>
+<meta name = "date" content = "2018-02-11" >
+<title>Jaanga Cookbook HTML</title>
 
 <style>
 /* Copyright 2018 Ladybug Tools authors. MIT License */
@@ -50,8 +50,8 @@
 	<div id = "divMenu" >
 
 		<p>
-			<a href="http://www.ladybug.tools/" target="_top" >Ladybug Tools</a> &raquo;
-<!--
+			<a href="http://jaanga.github.io/" target="_top" >Jaanga</a> &raquo;
+	<!--
 			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo;
 			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
 -->
@@ -80,11 +80,11 @@
 
 		<div id= "divFooter" >
 
-			<div title='many thanks!' ><a href=#pages/credits.md >Credits</a></div>
-			<div><a href=#pages/code-of-conduct.md >Code of Conduct</a></div>
-			<div><a href=#pages/contributing.md >Contributing</a></div>
-			<div><a href=#pages/license.md >License</a></div>
-			<div><a href=#pages/markdown-help.md >Markdown Help</a></div>
+			<div title='many thanks!' ><a href=#../pages/credits.md >Credits</a></div>
+			<div><a href=#../pages/code-of-conduct.md >Code of Conduct</a></div>
+			<div><a href=#../pages/contributing.md >Contributing</a></div>
+			<div><a href=#../pages/license.md >License</a></div>
+			<div><a href=#../pages/markdown-help.md >Markdown Help</a></div>
 			<div><a href="javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
 			<div><a href="https://api.github.com/rate_limit" target="_blank" title="Occasionaly this script breaks if you go over the GitHub API rate limit" >github rate limits</a></div>
 
@@ -105,12 +105,11 @@
 
 <script>
 
-	const user = 'ladybug-tools';
-	const repo = '/spider';
-	const pathRepo = '';
-	const branch = '/master/'
+	const user = 'jaanga';
+	const repo = '/jaanga.github.io';
+	const pathRepo = 'cookbook-html/';
 
-	const uriDefaultFile = 'README.md';
+	const uriDefaultFile = 'readme.md';
 //	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
@@ -126,7 +125,7 @@
 
 	function init() {
 
-		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + '/master/';
 //console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
@@ -163,8 +162,6 @@
 
 		}
 
-
-
 		getFolderContents( pathCurrent );
 
 		if ( ulc.endsWith( '.md' ) ) {
@@ -193,7 +190,8 @@
 
 	function getFolderContents( path = '' ) {
 
-		const url = urlGitHubApiContents + path;
+		const url = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo + path;
+		console.log( 'url', url );
 
 		requestFile( url, callbackGitHubMenu );
 
@@ -209,7 +207,8 @@
 			'<b>' +
 				'<a href=JavaScript:getFolderContents(); >' +
 
-					( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
+//					( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
+					'<span style=font-size:24px >&#x2302</span>' +
 
 				'</a> &raquo; ' +
 			'</b>';
@@ -242,7 +241,7 @@
 
 		if ( items.message ) { alert( items.message ); return; }
 
-		const ignoreFolders = [ 'archive', 'data', 'pages', 'plugins', 'read-gbxml' ]; //, 'plugins'
+		const ignoreFolders = [ 'data' ]; //, 'plugins'
 
 		for ( let item of items ) {
 
@@ -262,7 +261,7 @@
 
 		}
 
-		const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html', 'ladybug-tools-spider.html' ];
+		const ignoreFiles = [ '.gitattributes', '.gitignore', '404', 'ladybug-tools-spider.html' ];
 
 		for ( let item of items ) {
 
@@ -275,7 +274,7 @@
 				txt +=
 					'<table><tr>' +
 
-						'<td><a href="' + urlGitHubSource + '/blob' + branch + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
+						'<td><a href="' + urlGitHubSource + '/blob/master/' + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
 						'<td>' +
 
 							'<a href=#' + urlGitHubPage + pathRepo + itemPath +
@@ -287,9 +286,9 @@
 					'</tr></table>';
 
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-					&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
-
-					location.hash = urlGitHubPage + pathRepo + itemPath;
+					&& item.path !== 'readme.md' && item.name.toLowerCase() === 'readme.md' ) {
+// causing issues
+//					location.hash = urlGitHubPage + pathRepo + itemPath;
 
 				}
 
